--- a/CSCI346Final/stylesheet.css
+++ b/CSCI346Final/stylesheet.css
@@ -1,11 +1,5 @@
 /*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Apr 11, 2016, 10:56:55 AM
-    Author     : DavidCable, Justin Blankenship, Lucas Clarke
+    Author: DavidCable, Justin Blankenship, Lucas Clarke
 */
 
 #index h1 {
@@ -22,7 +16,8 @@ and open the template in the editor.
 }
 
 #index a{
-    margin-left:40%;
+    
+    align-self: center;
     
 }
 
