just some housekeeping

--- a/CSCI346Final/stylesheet.css
+++ b/CSCI346Final/stylesheet.css
@@ -21,6 +21,10 @@
     
 }
 
+canvas{
+align-content: center;
+}
+
 body{
     background-color: #556;
     background-image: linear-gradient(30deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
