--- a/CSCI346Final/stylesheet.css
+++ b/CSCI346Final/stylesheet.css
@@ -40,8 +40,8 @@ h3 {
      1px 1px 0 #000;   
 }
 
-h {
-    margin-top: -40px;
+h4 {
+    margin-top: -50px;
     text-align: center;
     font-size: 35px;
     font-family: sans-serif;
