--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
     Author: DavidCable, Justin Blankenship, Lucas Clarke
 */
 
-h1 {
+h1 { 
     text-align: center;
     font-size: 55px;
     font-family: sans-serif;
@@ -93,5 +93,11 @@ a {
     margin-top: 15px;
     border-radius: 10px;
     border: 3px solid white;
+}
+
+footer{
+    text-align: center;
+    margin-top: 15px;
+    
 }
 
